# AgentVulnMitigator

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt
.agents/skills/AgentVulnMitigator/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: AgentVulnMitigator-instincts.yaml
.claude/skills/AgentVulnMitigator/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: ci.yml
agents/: analyzer_agent.py  github_app.py  mitigation_agent.py
agentvuln/: __init__.py  guard.py
agentvuln/core/: __init__.py  analyzer.py  mitigation.py  netcheck.py  normalize.py
agentvuln/integrations/: __init__.py  langchain.py  openai.py
agentvuln/validators/: __init__.py  file.py  http.py  shell.py  sql.py  vector.py
docs/: RELEASING.md
examples/: README.md  demo.py  demo.tape
static/css/: style.css
static/js/: script.js
templates/: dashboard.html
tests/: red_team.py  test_agents.py  test_github_app.py  test_guard.py  test_integration_langchain.py  test_integration_openai.py  test_normalize.py  test_validators.py
